--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>inappropriate word</title>
+    <title>tits</title>
 </head>
-<body>
+<body>yess
 
 </body>
 </html>
